tests/snapshots/web__subscribe_traffics.snap
---
source: tests/web.rs
expression: output
---
{"id":1,"gid":<GID>,"method":"POST","uri":"http://localhost:<PORT>/echo","status":200,"size":13,"time":<TIME>,"mime":"text/plain","pending":false}
{"id":2,"gid":<GID>,"method":"POST","uri":"http://localhost:<PORT>/echo","status":200,"size":13,"time":<TIME>,"mime":"text/plain","pending":false}
